Use boxart as drag handle, fix sizing issues on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,12 @@ nav.navbar {
   height: 128px; }
   .signup__game__boxart img {
     width: 100%;
-    z-index: -1; }
+    z-index: -1;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none; }
 
 .signup__game__content {
   flex: 1 1 auto;
@@ -317,20 +322,20 @@ nav.navbar {
   display: flex;
   padding: 8px 12px 0 12px; }
 
-.signup__game__button {
-  flex: 0 0 30px;
-  text-align: center;
-  margin-left: 20px;
-  cursor: pointer; }
-
 .signup__game__name {
-  flex: 0 0 160px;
+  flex: 1 1 auto;
   font-size: 1.2em;
   font-weight: 700; }
 
 .signup__game__category {
   flex: 1 1 70px;
   text-align: right; }
+
+.signup__game__button {
+  flex: 0 0 30px;
+  text-align: center;
+  margin-left: 20px;
+  cursor: pointer; }
 
 .signup-field {
   padding: 4px 8px;
